--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -33,5 +33,7 @@ jobs:
           port: ${{ secrets.FTP_PORT }}
           protocol: ftps 
           local-dir: out/
-          server-dir: /home/rakhazu/public_html/test/
-          log-level: standard 
+          server-dir: test/
+          log-level: standard
+          passive: true
+          timeout: 40000
