--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,8 +31,8 @@ jobs:
           username: ${{ secrets.FTP_USERNAME }}
           password: ${{ secrets.FTP_PASSWORD }}
           port: ${{ secrets.FTP_PORT }}
-          protocol: ftps 
+          protocol: sftp 
           local-dir: out/
           server-dir: test/
           log-level: standard
-          timeout: 100000
+          timeout: 30000
