--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,12 +27,12 @@ jobs:
     - name: rsync deployments
       uses: contention/rsync-deployments@v2.0.0
       with:
-        flags: 'azv'  # 'a' for archive mode, 'z' for compression, 'v' for verbose
+        flags: 'azv -e "ssh -v"' # 'a' for archive mode, 'z' for compression, 'v' for verbose
         excludes: '*.log' 
         user: ${{ secrets.SSH_USERNAME }}  # Username server SSH
         host: ${{ secrets.SSH_HOST }}  # Hostname atau IP server
         localpath: './out/'  # Path lokal ke folder build
-        remotepath: '/test/'  # Path server tempat kamu deploy
+        remotepath: '/home/rakhazu/public_html/test/'  # Path server tempat kamu deploy
         deploy_key: ${{ secrets.PRIVATE_KEY }}  # Kunci SSH privat
 
 
