--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,8 +27,7 @@ jobs:
     - name: rsync deployments
       uses: contention/rsync-deployments@v2.0.0
       with:
-        flags: 'azv -e "ssh -v"' # 'a' for archive mode, 'z' for compression, 'v' for verbose
-        excludes: '*.log' 
+        flags: 'azv' # 'a' for archive mode, 'z' for compression, 'v' for verbose
         user: ${{ secrets.SSH_USERNAME }}  # Username server SSH
         host: ${{ secrets.SSH_HOST }}  # Hostname atau IP server
         localpath: './out/'  # Path lokal ke folder build
