--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,7 +29,7 @@ jobs:
       with:
         # The switches
         switches: -avzr --delete -exclude=".git" -exclude=".github"
-        path: /
+        path: ./out/
         remote_path: /home/rakhazu/public_html/test
         remote_host: ${{ secrets.SSH_HOST}}
         remote_user: ${{ secrets.SSH_USERNAME}}
