--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,7 +3,7 @@ name: Build and Deploy Next.js App
 on:
   push:
     branches:
-      - main # Atau branch yang kamu gunakan untuk produksi
+      - main
 
 jobs:
   build-and-deploy:
@@ -16,7 +16,7 @@ jobs:
       - name: Set up Node.js
         uses: actions/setup-node@v2
         with:
-          node-version: "20.13.1" # Pilih versi Node.js yang sesuai dengan projectmu
+          node-version: "20.13.1"
 
       - name: Install Dependencies
         run: npm install
